--- a/introducao-html-css-javascript/index.html
+++ b/introducao-html-css-javascript/index.html
@@ -22,7 +22,7 @@
     </header>
 
     <section id="home" class="bg1">
-        Daniel Ventura de Almeida
+        Guilherme krepke
       <h1 id="title-home">Transforme seu futuro.</h1>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic iure ratione cumque itaque officiis totam, molestiae numquam harum eum nobis</p>
       <button id="btn-home">Começar Agora</button>
@@ -37,7 +37,7 @@
       </div>
     </section>
 
-    <input type="text" name="daniel">
+    <input type="text" name="Guilherme">
 
     <script src="script.js"></script>
   </body>
